# kinova_gen3_Lab_source

./: .gitignore  README.md  docker-compose.yml  dockerfile_nvidia_kinova_humble
gz_ros2_control/: .pre-commit-config.yaml  README.md
gz_ros2_control/Dockerfile/: Dockerfile
gz_ros2_control/doc/: index.rst
gz_ros2_control/gz_ros2_control/: CHANGELOG.rst  CMakeLists.txt  gz_hardware_plugins.xml  package.xml
gz_ros2_control/gz_ros2_control/include/gz_ros2_control/: gz_system.hpp
gz_ros2_control/gz_ros2_control/src/: gz_ros2_control_plugin.cpp  gz_system.cpp
gz_ros2_control/gz_ros2_control_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
gz_ros2_control/gz_ros2_control_demos/config/: cart_controller_effort.yaml  cart_controller_velocity.yaml
gz_ros2_control/gz_ros2_control_demos/launch/: ackermann_drive_example.launch.py  diff_drive_example.launch.py  gripper_mimic_joint_example.launch.py  mecanum_drive_example.launch.py
gz_ros2_control/gz_ros2_control_demos/urdf/: test_ackermann_drive.xacro.urdf  test_cart_position.xacro.urdf  test_cart_velocity.xacro.urdf  test_gripper_mimic_joint.xacro.urdf  test_pendulum_effort.xacro.urdf  test_pendulum_position.xacro.urdf  test_tricycle_drive.xacro.urdf
gz_ros2_control/gz_ros2_control_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
gz_ros2_control/gz_ros2_control_tests/tests/: CMakeLists.txt  position_test_backward_compatibility.py
gz_ros2_control/ign_ros2_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
gz_ros2_control/ign_ros2_control_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
gz_ros2_control/ign_ros2_control_demos/examples/: example_ackermann_drive.cpp  example_diff_drive.cpp  example_gripper.cpp  example_position.cpp  example_tricycle_drive.cpp
gz_ros2_control/ign_ros2_control_demos/launch/: ackermann_drive_example.launch.py  cart_example_effort.launch.py  cart_example_position.launch.py  cart_example_velocity.launch.py  diff_drive_example.launch.py  diff_drive_example_namespaced.launch.py  gripper_mimic_joint_example.launch.py  pendulum_example_effort.launch.py  pendulum_example_position.launch.py  tricycle_drive_example.launch.py
gz_ros2_control/ign_ros2_control_demos/urdf/: test_cart_position.xacro.urdf
joy_controller_gripper/: CMakeLists.txt  package.xml
joy_controller_gripper/src/: gripper_action_client.cpp
main_launcher_pkg/: CMakeLists.txt  package.xml
main_launcher_pkg/config/: moveit_servo.rviz
main_launcher_pkg/launch/: move_group_sim.launch.py  moveit_servo_sim.launch.py  robot.launch.py  robot_just_move_group.launch.py  robot_move_group.launch.py  robot_servo.launch.py  robot_vision.launch.py  simulation.launch.py
main_launcher_pkg/sqlite_database/: warehouse_db.sqlite
moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: double_motion_trajectory.launch.py  goal_pose_trajectory.launch.py  gripper_control.launch.py  joint_space_trajectory.launch.py
moveit2_scripts/src/: double_motion_trajectory.cpp  goal_pose_trajectory.cpp  gripper_control.cpp  joint_space_trajectory.cpp  tf2_contact_point.cpp
moveit_servo/: CMakeLists.txt
moveit_servo/config/: kinova_config.yaml  kinova_simulated_config.yaml  kinova_simulated_config_pose_tracking.yaml
moveit_servo/launch/: kinova_joy_sim.launch.py  pose_tracking_sim.launch.py  servo_example.launch.py
moveit_servo/src/: pose_tracking.cpp
moveit_servo/src/cpp_interface_demo/: pose_tracking_demo.cpp  pose_tracking_demo_v2.cpp
moveit_servo/src/teleop_demo/: joystick_servo_example.cpp
ros2_kortex/kortex_bringup/launch/: kortex_control.launch.py  kortex_sim_control.launch.py
ros2_kortex/kortex_description/robots/: gen3.xacro  kinova.urdf.xacro  kortex_robot.xacro
ros2_kortex/kortex_driver/src/: hardware_interface.cpp
ros2_kortex/kortex_moveit_config/kinova_gen3_6dof_robotiq_2f_85_moveit_config/config/: initial_positions.yaml
ros2_kortex/kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_kortex/kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/config/: gen3.ros2_control.xacro  gen3.srdf  gen3.urdf.xacro
ros2_kortex/kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/launch/: setup_assistant_test.launch.py
ros2_kortex_vision/: README.md
ros2_kortex_vision/launch/: camera_streams.rviz
ros_gz/: .gitignore  .pre-commit-config.yaml
ros_gz/ros_gz/: CHANGELOG.rst  package.xml
ros_gz/ros_gz_bridge/: CHANGELOG.rst  README.md  package.xml
ros_gz/ros_gz_bridge/resource/: get_mappings.cpp.em
ros_gz/ros_gz_bridge/ros_gz_bridge/: mappings.py
ros_gz/ros_gz_bridge/src/: bridge_handle.cpp  bridge_handle.hpp  bridge_handle_gz_to_ros.cpp  factory.hpp  parameter_bridge.cpp
ros_gz/ros_gz_bridge/src/convert/: ros_gz_interfaces.cpp  ros_gz_interfaces_TEST.cpp  sensor_msgs.cpp  tf2_msgs.cpp
ros_gz/ros_gz_bridge/src/service_factories/: ros_gz_interfaces.cpp
ros_gz/ros_gz_bridge/test/utils/: gz_test_msg.cpp  gz_test_msg.hpp  ros_test_msg.cpp  (+1 more)
ros_gz/ros_gz_image/: CHANGELOG.rst  README.md  package.xml
ros_gz/ros_gz_image/src/: image_bridge.cpp
ros_gz/ros_gz_interfaces/: CHANGELOG.rst  README.md  package.xml
ros_gz/ros_gz_interfaces/msg/: SensorNoise.msg  WorldControl.msg
ros_gz/ros_gz_point_cloud/: CMakeLists.txt
ros_gz/ros_gz_sim/: CHANGELOG.rst  package.xml
ros_gz/ros_gz_sim_demos/: CHANGELOG.rst  package.xml
ros_gz/ros_gz_sim_demos/models/: rrbot.xacro
ros_gz/ros_ign/: CHANGELOG.rst  package.xml
ros_gz/ros_ign_bridge/: CHANGELOG.rst  package.xml
ros_gz/ros_ign_gazebo/: CHANGELOG.rst  package.xml
ros_gz/ros_ign_gazebo_demos/: CHANGELOG.rst  package.xml
ros_gz/ros_ign_image/: CHANGELOG.rst  package.xml
ros_gz/ros_ign_interfaces/: CHANGELOG.rst  package.xml
ros_gz/ros_ign_interfaces/msg/: Entity.msg  EntityFactory.msg
ros_gz/ros_ign_interfaces/srv/: DeleteEntity.srv
ros_gz/test_ros_gz_bridge/: CHANGELOG.rst  package.xml
ros_gz/tools/: .codespell_ignore_words
test_saves/: moveit_controllers.yaml  ros2_controllers.yaml
yolobot_recognition/scripts/: yolov8_ros2_pt.py
(+4 files in other folders)
