<?xml version="1.0"?>
<package format="3">
  <name>ign_ros2_control</name>
  <version>0.7.14</version>
  <description>Ignition ros2_control package allows to control simulated robots using ros2_control framework.</description>
  <maintainer email="alejandro@openrobotics.com">Alejandro Hernández</maintainer>
  <author>Alejandro Hernández</author>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_ros2_control</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
